fix hasadna/datacity-k8s#224 organization logo should be aligned to center on right column

--- a/ckanext/datacity/fanstatic/datacity-theme.css
+++ b/ckanext/datacity/fanstatic/datacity-theme.css
@@ -294,6 +294,11 @@ div#content.container .row.wrapper {
     max-width: 200px;
 }
 
+.organization-logo img {
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .masthead .logo img {
     max-height: 80px;
 }
